[gd_scene load_steps=8 format=3 uid="uid://desyhi2j1xs7n"]

[ext_resource type="Texture2D" uid="uid://bwn7i7h7gwg2p" path="res://assets/Pixel Art Top Down - Basic v1.1.2/Texture/TX Props.png" id="1_bad5a"]
[ext_resource type="Script" uid="uid://op2balm6inso" path="res://scenes/demigod_area/demigod_area.gd" id="1_d4la8"]
[ext_resource type="Shader" uid="uid://bn7xpk0hlaa32" path="res://demigod_area.gdshader" id="1_oygrq"]
[ext_resource type="Texture2D" uid="uid://ux4qkdnqelg0" path="res://assets/light.png" id="2_bad5a"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cxc8a"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v8kia"]
shader = ExtResource("1_oygrq")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_rtc16"]
particle_flag_disable_z = true
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 1.0
emission_ring_radius = 32.0
emission_ring_inner_radius = 0.0
emission_ring_cone_angle = 90.0
angle_min = 1.07288e-05
angle_max = 45.0
spread = 0.0
initial_velocity_min = 4.0
initial_velocity_max = 4.0
gravity = Vector3(0, 0, 0)
tangential_accel_min = 25.0
tangential_accel_max = 25.0

[node name="DemigodArea" type="Area2D"]
script = ExtResource("1_d4la8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_cxc8a")

[node name="BaseSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_bad5a")
region_enabled = true
region_rect = Rect2(352, 264, 96, 80)

[node name="LightSprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_v8kia")
scale = Vector2(0.05, 0.05)
texture = ExtResource("2_bad5a")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
modulate = Color(1, 0, 0.498039, 1)
process_material = SubResource("ParticleProcessMaterial_rtc16")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
modulate = Color(1, 0, 0.498039, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
